<resources>
    <string name="app_name">Movie App</string>

    <!--    TabLayout-->
    <string name="title_trailers_tab_layout">Trailers</string>
    <string name="title_similar_tab_layout">Similares</string>
    <string name="title_comments_tab_layout">Comentários</string>

    <!--    Generic-->
    <string name="text_name_empty">Digite seu nome</string>
    <string name="text_email_empty">Digite seu e-mail</string>
    <string name="text_phone_empty">Digite seu telefone</string>
    <string name="text_phone_invalid">Digite um telefone válido</string>
    <string name="text_password_empty">Digite sua senha</string>
    <string name="error_generic">Ocorreu um erro, por favor tente novamente mais tarde.</string>
    <string name="text_formated_value">R$ %1$s</string>
    <string name="error_loading_movies">Erro ao carregar filmes: %1$s</string>
    <string name="unknown_error">Erro desconhecido, por favor tente novamente mais tarde.</string>

    <!--    Erros Firebase Authentication-->
    <string name="account_not_register_or_password_invalid">E-mail ou senha inválidos. Por favor, verifique e tente novamente.</string>
    <string name="email_invalid">O formato do e-mail digitado é inválido.</string>
    <string name="this_email_used">Este e-mail já está em uso.</string>
    <string name="enter_password_stronger">Sua senha é muito fraca. Use pelo menos 6 caracteres.</string>
    <string name="error_register">Ocorreu um erro no registro. Tente novamente.</string>
    <string name="error_user_not_found">Erro, usuário não autenticado.</string>

    <!--    Onboarding Fragment-->
    <string name="onboarding_button">Iniciar</string>

    <!--    HomeAuthFragment-->
    <string name="title_home_auth_fragment">Entrar com</string>
    <string name="button_continue_with_facebook_home_auth_fragment">Continuar com o Facebook</string>
    <string name="button_continue_with_google_home_auth_fragment">Continuar com o Google</string>
    <string name="text_social_or_password_home_auth_fragment">ou</string>
    <string name="button_sign_in_with_password_home_auth_fragment">Entrar com senha</string>
    <string name="text_not_have_an_account_home_auth_fragment">Não tem uma conta?</string>
    <string name="text_sign_up_home_auth_fragment">Inscrever-se</string>

    <!--    RegisterFragment-->
    <string name="title_register_fragment">Crie sua conta</string>
    <string name="text_hint_edit_email_register_fragment">Email</string>
    <string name="text_hint_edit_password_register_fragment">Senha</string>
    <string name="text_button_sign_up_register_fragment">Inscrever-se</string>
    <string name="text_continue_social_network_register_fragment">ou continuar com</string>
    <string name="text_already_account_register_fragment">já tem uma conta?</string>
    <string name="text_button_sign_in_register_fragment">Entrar</string>
    <string name="text_email_empty_register_fragment">Digite um e-mail válido</string>
    <string name="text_password_empty_register_fragment">Digite uma senha</string>

    <!--    LoginFragment-->
    <string name="title_login_fragment">Faça login na sua conta</string>
    <string name="text_hint_edit_email_login_fragment">Email</string>
    <string name="text_hint_edit_password_login_fragment">Senha</string>
    <string name="text_button_sign_in_login_fragment">Entrar</string>
    <string name="text_forgot_password_login_fragment">Esqueceu a senha?</string>
    <string name="text_email_empty_login_fragment">Digite um e-mail válido</string>
    <string name="text_password_empty_login_fragment">Digite sua senha</string>
    <string name="text_continue_social_network_login_fragment">ou continuar com</string>

    <!--    ForgotFragment-->
    <string name="title_forgot_fragment">Crie sua nova senha</string>
    <string name="text_hint_edit_email_forgot_fragment">Email</string>
    <string name="text_button_forgot_fragment">Recuperar conta</string>
    <string name="text_email_empty_forgot_fragment">Digite um e-mail válido</string>
    <string name="text_email_sent_forgot_fragment">Um e-mail de recuperação de senha foi enviado para sua caixa de entrada, por favor verifique.</string>

    <!--    DownloadFragment-->
    <string name="text_title_download_fragment">Baixados</string>
    <string name="text_message_empty_download_fragment">Você ainda não baixou nenhum filme. Vá para a página de detalhes do filme e clique no botão de download para baixar o filme.</string>

    <!--    FavoriteFragment-->
    <string name="text_title_favorite_fragment">Favoritos</string>
    <string name="text_message_empty_favorite_fragment">Você ainda não adicionou nenhum filme aos favoritos. Vá para a página de detalhes do filme e clique no botão de adicionar aos favoritos.</string>


    <!--    DialogDownloading-->
    <string name="text_title_dialog_downloading">Download</string>
    <string name="text_message_dialog_downloading">Filmes ainda baixando…\nAguarde ou oculte o processo</string>
    <string name="text_hide_dialog_downloading">Esconder</string>
    <string name="text_downloaded_size_dialog_downloading">%1$s / %2$s</string>
    <string name="text_download_progress_dialog_downloading">%1$d%%</string>

    <!--    BottomBar-->
    <string name="title_menu_home">Início</string>
    <string name="title_menu_search">Pesquisar</string>
    <string name="title_menu_favorite">Favorite</string>
    <string name="title_menu_download">Baixar</string>
    <string name="title_menu_profile">Perfil</string>

    <!--    Genre Item-->
    <string name="text_show_all_genre_item">Ver todos</string>

    <!--    MovieGenreFragment-->
    <string name="text_search_hint_movie_genre_fragment">Pesquisar</string>
    <string name="text_title_not_found_movie_genre_fragment">Nenhum filme encontrado</string>
    <string name="text_message_note_found_movie_genre_fragment">Não encontramos nenhum filme cadastrado para este gênero no momento\n.</string>

    <!--    MovieDetailFragment-->
    <string name="text_genres_movie_detail_fragment">Gênero: %1$s</string>
    <string name="text_button_play_movie_detail_fragment">Play</string>
    <string name="text_button_download_movie_detail_fragment">Download</string>

    <!--    SearchFragment-->
    <string name="text_title_empty_search_fragment">Não encontrado</string>
    <string name="text_message_empty_search_fragment">Desculpe, a palavra-chave que você digitou não foi encontrada. Tente verificar novamente ou pesquise com outras palavras-chave.</string>
    <string name="text_title_not_search_fragment">Pesquisar filme</string>
    <string name="text_message_not_search_fragment">Olá, digite o nome do filme que deseja pesquisar\n</string>

    <!--    bottomSheetDeleteMovie-->
    <string name="bottom_sheet_delete_movie_title">Excluir</string>
    <string name="bottom_sheet_delete_movie_message">Tem certeza que deseja excluir o download deste filme?</string>
    <string name="bottom_sheet_delete_movie_button_delete">Sim, Excluir</string>
    <string name="bottom_sheet_delete_movie_button_cancel">Cancelar</string>

    <!--    ProfileFragment-->
    <string name="text_edit_profile_profile_fragment">Editar perfil</string>
    <string name="text_notification_profile_fragment">Notificações</string>
    <string name="text_download_profile_fragment">Downloads</string>
    <string name="text_security_profile_fragment">Segurança</string>
    <string name="text_language_profile_fragment">Idioma</string>
    <string name="text_dark_mode_profile_fragment">Modo escuro</string>
    <string name="text_helper_center_profile_fragment">Centro de ajuda</string>
    <string name="text_privacy_policy_profile_fragment">Política de privacidade</string>
    <string name="text_logout_profile_fragment">Sair</string>
    <string name="text_get_user_error_profile_fragment">Erro ao obter usuário</string>
    <string name="text_user_name_profile_fragment">%1$s %2$s</string>


    <!--    ProfileEditFragment-->
    <string name="text_title_profile_edit_fragment">Editar perfil</string>
    <string name="text_hint_edit_first_name_profile_edit_fragment">Nome</string>
    <string name="text_hint_edit_last_name_profile_edit_fragment">Sobrenome</string>
    <string name="text_hint_edit_email_profile_edit_fragment">E-mail</string>
    <string name="text_hint_edit_telephone_profile_edit_fragment">Telefone</string>
    <string name="text_hint_edit_sex_profile_edit_fragment">Sexo</string>
    <string name="text_hint_edit_country_profile_edit_fragment">País</string>
    <string name="text_button_update_profile_edit_fragment">Atualizar</string>
    <string name="text_option_male">Masculino</string>
    <string name="text_option_female">Feminino</string>
    <string name="text_option_prefer_not_to_say">Prefiro não responder</string>
    <string name="text_first_name_empty_profile_edit_fragment">Digite seu nome</string>
    <string name="text_last_name_empty_profile_edit_fragment">Digite seu sobrenome</string>
    <string name="text_telephone_empty_or_invalid_profile_edit_fragment">Digite um telefone válido</string>
    <string name="text_country_empty_profile_edit_fragment">Selecione seu país</string>
    <string name="text_sex_empty_profile_edit_fragment">Selecione seu sexo</string>
    <string name="text_update_success_profile_edit_fragment">Perfil atualizado com sucesso</string>
    <string name="text_update_error_profile_edit_fragment">Erro ao atualizar perfil</string>
    <string name="text_get_user_error_profile_edit_fragment">Erro ao obter usuário</string>


    <!--    BottomSheetSelectImage-->
    <string name="bottom_sheet_select_image_button_take_photo">Tirar foto</string>
    <string name="bottom_sheet_select_image_button_choose_gallery">Escolher foto</string>

    <!--    BottomSheetPermissionDenied-->
    <string name="bottom_sheet_permission_denied_title">Acesso Necessário</string>
    <string name="bottom_sheet_permission_denied_message">Para alterar sua foto de perfil, você precisa conceder as permissões necessárias nas configurações do aplicativo.</string>
    <string name="bottom_sheet_permission_denied_button_open_settings">Abrir Configurações</string>
    

    <!--    BottomSheetLogout-->
    <string name="bottom_sheet_logout_title">Sair</string>
    <string name="bottom_sheet_logout_message">Tem certeza que deseja sair?</string>
    <string name="bottom_sheet_logout_button_logout">Sim, Sair</string>
    <string name="bottom_sheet_logout_button_cancel">Cancelar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>