<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/bg_bottom_sheet">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bottom_sheet_permission_denied_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#212121" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/bottom_sheet_permission_denied_message"
        android:textColor="#616161"
        android:textSize="14sp" />

    <com.google.android.material.button.MaterialButton
        style="@style/ThemePrimaryButton"
        android:id="@+id/btn_open_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/bottom_sheet_permission_denied_button_open_settings" />

</LinearLayout>