<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="32dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/text_title_dialog_downloading"
        android:textColor="@color/color_default"
        android:textSize="24sp"
        android:fontFamily="@font/urbanist_700"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/urbanist_400"
        android:text="@string/text_message_dialog_downloading"
        android:textAlignment="center"
        android:textColor="#212121"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_marginVertical="32dp"
        android:layout_height="1dp"
        android:background="#EEEEEE"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_downloading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/urbanist_700"
            tools:text="457.2 / 968.5 MB"
            android:textColor="#212121" />

        <TextView
            android:id="@+id/text_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/urbanist_700"
            tools:text="47%"
            android:textColor="@color/color_default" />


    </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">

       <com.google.android.material.progressindicator.LinearProgressIndicator
           android:id="@+id/progress_indicator"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:layout_gravity="center_vertical"
           app:trackCornerRadius="4dp"
           app:trackThickness="8dp"
           tools:progress="47"/>

       <ImageButton
           android:id="@+id/ib_cancel"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:padding="8dp"
           android:background="@android:color/transparent"
           android:importantForAccessibility="no"
           android:src="@drawable/ic_close_black_24dp"/>

   </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_hide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        style="@style/ThemeSecondaryButton"
        app:backgroundTint="#FCE7E9"
        android:text="@string/text_hide_dialog_downloading"/>



</LinearLayout>